# issue_obervatory

./: .env.example  .env_old  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  FIXES_2026_02_23.md  FIXES_REQUIRED_YF.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_PHASE_A.md  Makefile  README.md  SUMMARY_2026_02_23.txt  UX_RETEST_FIXES_2026_02_23.md  alembic.ini  c  clinerules  collect_mongo.py  docker-compose.yml  init_prompt.txt  pyproject.toml  test_cred_pool.py  test_credential_fallback.py  test_rss_match.py  test_serper_env.py
.claude/: settings.local.json
.claude/agents/: core-application-engineer.md  db-data-engineer.md  frontend-engineer.md  qa-guardian.md  research-strategist.md  ui-designer.md  ux-tester.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_arenas_config_to_query_designs.py  003_add_suspended_at_to_collection_runs.py  004_add_scraping_jobs.py  005_add_content_annotations.py  006_add_search_term_groups.py  007_add_simhash_to_content_records.py  008_add_query_design_cloning.py  009_add_public_figure_flag_to_actors.py  010_add_target_arenas_to_search_terms.py  011_add_gin_index_target_arenas.py  012_add_codebook_entries.py  013_add_translations_to_search_terms.py  014_add_zeeschuimer_imports_table.py  015_make_content_hash_unique.py  016_add_codebook_created_by.py  017_add_duplicates_skipped_to_collection_tasks.py  018_add_projects.py  019_add_project_id_to_collection_runs.py  020_add_parent_term_and_override_arena.py  021_add_scrape_status.py  022_add_term_matched.py  023_unique_project_owner_name.py  024_add_actor_skip_tracking.py  025_add_content_record_links.py  026_add_collection_attempts.py  027_reclassify_bluesky_arena.py  028_add_platform_url_errors.py  029_move_source_lists_to_project.py  030_unique_search_terms.py  031_add_project_arenas_config.py  032_add_project_comments_config.py  033_standardize_arena_categories.py  034_add_extracted_urls_and_video_downloads.py  035_add_url_errors_to_scraping_jobs.py  036_add_engagement_scalers_table.py  037_add_project_collection_mode.py  038_add_user_templates_and_credit_overhaul.py  039_add_project_collaborators.py  040_add_dashboard_performance_indexes.py  (+2 more)
docker/: minio-init.sh
docs/: application_description.md  implementation_plan_2_0.md  pre_production_checklist.md  pre_production_checklist_p0_2_triage.md  pre_production_checklist_p0_5_secrets.md  security_fixes_2026_02_21.md
docs/api/: bulk_actor_import_example.md  bulk_actor_import_test_plan.md
docs/arenas/: ai_chat_search.md  bluesky.md  common_crawl_wayback.md  discord.md  event_registry.md  facebook_instagram.md  gab.md  gdelt.md  google_autocomplete.md  google_search.md  linkedin.md  majestic.md  new_arenas_implementation_plan.md  reddit.md  ritzau_via.md  rss_feeds.md  telegram.md  threads.md  tiktok.md  twitch.md  url_scraper.md  vkontakte.md  wikipedia.md  x_twitter.md  youtube.md
docs/bugfixes/: collection_stuck_tasks_fix.md
docs/db/: content_filter_indexes.md
docs/db_engineer_tasks/: codebook_entry_model_spec.md
docs/decisions/: ADR-012-source-discovery-assistance.md  DQ-05-bluesky-authentication-fix.md  F07_F08_credential_pool_env_var_fallback.md  bluesky_api_url_fix_2026_02_23.md
docs/features/: YF-05_ad_hoc_exploration.md  bulk_actor_import.md  bulk_actor_import_example.txt
docs/fixes/: explore_page_fixes_r10_r11.md
docs/guides/: credential_acquisition_guide.md  env_setup.md  what_data_is_collected.md
docs/handoffs/: zeeschuimer_db_layer_2026_02_21.md
docs/implementation_notes/: IP2_052_multilingual_query_design.md  SB-09-SB-10-source-discovery.md  SB-16_codebook_ui_implementation.md  ip2_061_mixed_name_resolution.md  yf_07_bulk_actor_import.md  zeeschuimer_integration.md
docs/implementation_reports/: SB-16_API_SUMMARY.md  SB-16_codebook_management_api.md  YF-13_cross_design_discovered_sources.md
docs/issues/: collection_run_report_2026_03_05.md  duplicate_collection_runs.md
docs/migrations/: migration_015_notes.md
docs/operations/: api_reference.md  arena_config.md  backup_restore.md  deployment.md  secrets_management.md
docs/plans/: bright_data_web_scraper_migration.md  content_page_filter_fix_plan.md
docs/qa_reports/: content_page_filter_audit.md
docs/release_notes/: release_notes_2026_02_20.md  release_notes_2026_02_21.md  release_notes_2026_02_26.md
docs/research_reports/: actor_workflow_redesign.md  ai_uddannelse_codebase_recommendations.md  co2_afgift_codebase_recommendations.md  coherency_audit_2026_02_21.md  comention_snowball_recommendation.md  comments_collection_feasibility.md  comments_module_implementation_plan.md  greenland_codebase_recommendations.md  (+7 more)
docs/status/: core.md  (+11 more)
reports/: collaborators_feature_review.md  cross_platform_data_collection.md  danish_context_guide.md  zeeschuimer_assessment.md
scripts/: backfill_search_terms.py  backup_postgres.py  backup_postgres.sh  bootstrap_admin.py  brightdata_credit_test_results.json  create_partitions.py  diagnose_facebook.py  diagnose_openrouter.py  export_project_csv.py  generate_api_key.py  rerun_google_search_url_extraction.py  rerun_ner_enrichment.py  rerun_url_extraction.py  restore_postgres.py  restore_postgres.sh  test_brightdata_credits.py  test_brightdata_discovery.py  test_brightdata_flow.py  test_fb_batch_stats.py  test_fb_chunking.py  test_fb_full_production.py  test_fb_production_actors.py  test_fb_with_dates.py  test_openrouter.py  test_stuck_apis.py  test_tiktok.py
tests/: __init__.py  conftest.py
(+535 files in other folders)
